[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Tales Padua <tales.padua@loft.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
pygame = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.10.1"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
